--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
 
         <title>Mamma's Kitchen</title>
 
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/font-awesome.min.css">
-        <link rel="stylesheet" href="css/owl.carousel.css">
-        <link rel="stylesheet" href="css/owl.theme.css">
-        <link rel="stylesheet" href="css/animate.css">
-        <link rel="stylesheet" href="css/flexslider.css">
-        <link rel="stylesheet" href="css/pricing.css">
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="public/front/css/bootstrap.min.css">
+        <link rel="stylesheet" href="public/front/css/font-awesome.min.css">
+        <link rel="stylesheet" href="public/front/css/owl.carousel.css">
+        <link rel="stylesheet" href="public/front/css/owl.theme.css">
+        <link rel="stylesheet" href="public/front/css/animate.css">
+        <link rel="stylesheet" href="public/front/css/flexslider.css">
+        <link rel="stylesheet" href="public/front/css/pricing.css">
+        <link rel="stylesheet" href="public/front/css/main.css">
 
 
-        <script src="js/jquery-1.11.2.min.js"></script>
-        <script type="text/javascript" src="js/jquery.flexslider.min.js"></script>
+        <script src="public/frontjs/jquery-1.11.2.min.js"></script>
+        <script src="public/front/js/jquery.flexslider.min.js"></script>
         <script type="text/javascript">
             $(window).load(function() {
                 $('.flexslider').flexslider({
@@ -68,7 +68,7 @@
                         <span class="icon-bar"></span>
                     </button>
                     <a class="navbar-brand" href="#">
-                        <img id="logo" src="images/Logo_main.png" class="logo img-responsive">
+                        <img id="logo" src="public/front/images/Logo_main.png" class="logo img-responsive">
                     </a>
                 </div>
 
@@ -120,7 +120,7 @@
 
         <!--== 6. About us ==-->
         <section id="about" class="about">
-            <img src="images/icons/about_color.png" class="img-responsive section-icon hidden-sm hidden-xs">
+            <img src="public/front/images/icons/about_color.png" class="img-responsive section-icon hidden-sm hidden-xs">
             <div class="wrapper">
                 <div class="container-fluid">
                     <div class="row dis-table">
@@ -175,7 +175,7 @@
                                 <li class="item dinner">
 
                                     <a href="#">
-                                        <img src="images/food1.jpg" class="img-responsive" alt="Food" >
+                                        <img src="public/front/images/food1.jpg" class="img-responsive" alt="Food" >
                                         <div class="menu-desc text-center">
                                             <span>
                                                 <h3>Tomato Curry</h3>
@@ -190,7 +190,7 @@
                                 <li class="item breakfast">
 
                                     <a href="#">
-                                        <img src="images/food2.jpg" class="img-responsive" alt="Food" >
+                                        <img src="public/front/images/food2.jpg" class="img-responsive" alt="Food" >
                                         <div class="menu-desc">
                                             <span>
                                                 <h3>Prawn Dish</h3>
@@ -204,7 +204,7 @@
                                 <li class="item desert">
 
                                     <a href="#">
-                                        <img src="images/food3.jpg" class="img-responsive" alt="Food" >
+                                        <img src="public/front/images/food3.jpg" class="img-responsive" alt="Food" >
                                         <div class="menu-desc">
                                             <span>
                                                 <h3>Salad Dish</h3>
@@ -218,7 +218,7 @@
                                 <li class="item breakfast special">
 
                                     <a href="#">
-                                        <img src="images/food4.jpg" class="img-responsive" alt="Food" >
+                                        <img src="public/front/images/food4.jpg" class="img-responsive" alt="Food" >
                                         <div class="menu-desc">
                                             <span>
                                                 <h3>Prawn Dish</h3>
@@ -232,7 +232,7 @@
                                 <li class="item breakfast">
 
                                     <a href="#">
-                                        <img src="images/food5.jpg" class="img-responsive" alt="Food" >
+                                        <img src="public/front/images/food5.jpg" class="img-responsive" alt="Food" >
                                         <div class="menu-desc">
                                             <span>
                                                 <h3>Vegetable Dish</h3>
@@ -246,7 +246,7 @@
                                 <li class="item dinner special">
 
                                     <a href="#">
-                                        <img src="images/food6.jpg" class="img-responsive" alt="Food" >
+                                        <img src="public/front/images/food6.jpg" class="img-responsive" alt="Food" >
                                         <div class="menu-desc">
                                             <span>
                                                 <h3>Chicken Dish</h3>
@@ -260,7 +260,7 @@
                                 <li class="item desert">
 
                                     <a href="#">
-                                        <img src="images/food7.jpg" class="img-responsive" alt="Food" >
+                                        <img src="public/front/images/food7.jpg" class="img-responsive" alt="Food" >
                                         <div class="menu-desc">
                                             <span>
                                                 <h3>Vegetable Noodles</h3>
@@ -274,7 +274,7 @@
                                 <li class="item dinner">
 
                                     <a href="#">
-                                        <img src="images/food8.jpg" class="img-responsive" alt="Food" >
+                                        <img src="public/front/images/food8.jpg" class="img-responsive" alt="Food" >
                                         <div class="menu-desc">
                                             <span>
                                                 <h3>Special Salad</h3>
@@ -288,7 +288,7 @@
                                 <li class="item desert special">
 
                                     <a href="#">
-                                        <img src="images/food9.jpg" class="img-responsive" alt="Food" >
+                                        <img src="public/front/images/food9.jpg" class="img-responsive" alt="Food" >
                                         <div class="menu-desc">
                                             <span>
                                                 <h3>Ice-cream</h3>
@@ -315,7 +315,7 @@
 
         <!--== 8. Great Place to enjoy ==-->
         <section id="great-place-to-enjoy" class="great-place-to-enjoy">
-            <img class="img-responsive section-icon hidden-sm hidden-xs" src="images/icons/beer_black.png">
+            <img class="img-responsive section-icon hidden-sm hidden-xs" src="public/front/images/icons/beer_black.png">
             <div class="wrapper">
                 <div class="container-fluid">
                     <div class="row dis-table">
@@ -334,7 +334,7 @@
 
         <!--==  9. Our Beer  ==-->
         <section id="beer" class="beer">
-            <img class="img-responsive section-icon hidden-sm hidden-xs" src="images/icons/beer_color.png">
+            <img class="img-responsive section-icon hidden-sm hidden-xs" src="public/front/images/icons/beer_color.png">
             <div class="container-fluid">
                 <div class="row dis-table">
                     <div class="hidden-xs col-sm-6 dis-table-cell section-bg">
@@ -362,7 +362,7 @@
 
         <!--== 10. Our Breakfast Menu ==-->
         <section id="breakfast" class="breakfast">
-            <img class="img-responsive section-icon hidden-sm hidden-xs" src="images/icons/bread_black.png">
+            <img class="img-responsive section-icon hidden-sm hidden-xs" src="public/front/images/icons/bread_black.png">
             <div class="wrapper">
                 <div class="container-fluid">
                     <div class="row dis-table">
@@ -381,7 +381,7 @@
 
         <!--== 11. Our Bread ==-->
         <section id="bread" class="bread">
-            <img class="img-responsive section-icon hidden-sm hidden-xs" src="images/icons/bread_color.png">
+            <img class="img-responsive section-icon hidden-sm hidden-xs" src="public/front/images/icons/bread_color.png">
             <div class="container-fluid">
                 <div class="row dis-table">
                     <div class="hidden-xs col-sm-6 dis-table-cell section-bg">
@@ -411,7 +411,7 @@
 
         <!--== 12. Our Featured Dishes Menu ==-->
         <section id="featured-dish" class="featured-dish">
-            <img class="img-responsive section-icon hidden-sm hidden-xs" src="images/icons/food_black.png">
+            <img class="img-responsive section-icon hidden-sm hidden-xs" src="public/front/images/icons/food_black.png">
             <div class="wrapper">
                 <div class="container-fluid">
                     <div class="row dis-table">
@@ -686,7 +686,7 @@
         <!--== 14. Have a look to our dishes ==-->
 
         <section id="have-a-look" class="have-a-look hidden-xs">
-            <img class="img-responsive section-icon hidden-sm hidden-xs" src="images/icons/food_color.png">
+            <img class="img-responsive section-icon hidden-sm hidden-xs" src="public/front/images/icons/food_color.png">
             <div class="wrapper">
                 <div class="container-fluid">
                     <div class="row">
@@ -696,37 +696,37 @@
                                 <div class="flexslider">
                                     <ul class="slides">
                                         <li>
-                                            <img src="images/menu-gallery/menu1.png" />
+                                            <img src="public/front/images/menu-gallery/menu1.png" />
                                         </li>
                                         <li>
-                                            <img src="images/menu-gallery/menu2.jpg" />
+                                            <img src="public/front/images/menu-gallery/menu2.jpg" />
                                         </li>
                                         <li>
-                                            <img src="images/menu-gallery/menu3.png" />
+                                            <img src="public/front/images/menu-gallery/menu3.png" />
                                         </li>
                                         <li>
-                                            <img src="images/menu-gallery/menu4.jpg" />
+                                            <img src="public/front/images/menu-gallery/menu4.jpg" />
                                         </li>
                                         <li>
-                                            <img src="images/menu-gallery/menu5.jpg" />
+                                            <img src="public/front/images/menu-gallery/menu5.jpg" />
                                         </li>
                                         <li>
-                                            <img src="images/menu-gallery/menu6.jpg" />
+                                            <img src="public/front/images/menu-gallery/menu6.jpg" />
                                         </li>
                                         <li>
-                                            <img src="images/menu-gallery/menu7.jpg" />
+                                            <img src="public/front/images/menu-gallery/menu7.jpg" />
                                         </li>
                                         <li>
-                                            <img src="images/menu-gallery/menu8.jpg" />
+                                            <img src="public/front/images/menu-gallery/menu8.jpg" />
                                         </li>
                                         <li>
-                                            <img src="images/menu-gallery/menu9.jpg" />
+                                            <img src="public/front/images/menu-gallery/menu9.jpg" />
                                         </li>
                                         <li>
-                                            <img src="images/menu-gallery/menu10.jpg" />
+                                            <img src="public/front/images/menu-gallery/menu10.jpg" />
                                         </li>
                                         <li>
-                                            <img src="images/menu-gallery/menu11.jpg" />
+                                            <img src="public/front/images/menu-gallery/menu11.jpg" />
                                         </li>
                                     </ul>
                                 </div>
@@ -748,7 +748,7 @@
 
         <!--== 15. Reserve A Table! ==-->
         <section id="reserve" class="reserve">
-            <img class="img-responsive section-icon hidden-sm hidden-xs" src="images/icons/reserve_black.png">
+            <img class="img-responsive section-icon hidden-sm hidden-xs" src="public/front/images/icons/reserve_black.png">
             <div class="wrapper">
                 <div class="container-fluid">
                     <div class="row dis-table">
@@ -766,7 +766,7 @@
 
 
         <section class="reservation">
-            <img class="img-responsive section-icon hidden-sm hidden-xs" src="images/icons/reserve_color.png">
+            <img class="img-responsive section-icon hidden-sm hidden-xs" src="public/front/images/icons/reserve_color.png">
             <div class="wrapper">
                 <div class="container-fluid">
                     <div class=" section-content">
@@ -916,7 +916,7 @@
                     <div class="col-md-6 col-md-offset-3">
                         <div class="copyright text-center">
                             <p>
-                                &copy; Copyright, 2015 <a href="#">Your Website Link.</a> Theme by <a href="http://themewagon.com/"  target="_blank">ThemeWagon</a>
+                                &copy; Copyright, 2018 <a href="#">Your Website Link.</a> Theme by <a href="http://themewagon.com/"  target="_blank">ThemeWagon</a>
                             </p>
                         </div>
                     </div>
@@ -925,14 +925,14 @@
         </footer>
 
     
-        <script src="js/bootstrap.min.js"></script>
-        <script src="js/owl.carousel.min.js"></script>
-        <script type="text/javascript" src="js/jquery.mixitup.min.js" ></script>
-        <script src="js/wow.min.js"></script>
-        <script src="js/jquery.validate.js"></script>
-        <script type="text/javascript" src="js/jquery.hoverdir.js"></script>
-        <script type="text/javascript" src="js/jQuery.scrollSpeed.js"></script>
-        <script src="js/script.js"></script>
+        <script src="public/front/js/bootstrap.min.js"></script>
+        <script src="public/front/js/owl.carousel.min.js"></script>
+        <script src="public/front/js/jquery.mixitup.min.js" ></script>
+        <script src="public/front/js/wow.min.js"></script>
+        <script src="public/front/js/jquery.validate.js"></script>
+        <script src="public/front/js/jquery.hoverdir.js"></script>
+        <script src="public/front/js/jQuery.scrollSpeed.js"></script>
+        <script src="public/front/js/script.js"></script>
         
 
     </body>
