--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
         <title>Mamma's Kitchen</title>
 
+        <link rel="icon" href="public/front/images/icons/icon.png'">
         <link rel="stylesheet" href="public/front/css/bootstrap.min.css">
         <link rel="stylesheet" href="public/front/css/font-awesome.min.css">
         <link rel="stylesheet" href="public/front/css/owl.carousel.css">
