--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 
         <title>Mamma's Kitchen</title>
 
-        <link rel="icon" href="public/front/images/icons/icon.png'">
         <link rel="stylesheet" href="public/front/css/bootstrap.min.css">
         <link rel="stylesheet" href="public/front/css/font-awesome.min.css">
         <link rel="stylesheet" href="public/front/css/owl.carousel.css">
@@ -19,8 +18,8 @@
         <link rel="stylesheet" href="public/front/css/main.css">
 
 
-        <script src="public/frontjs/jquery-1.11.2.min.js"></script>
-        <script src="public/front/js/jquery.flexslider.min.js"></script>
+        <script src="public/front/js/jquery-1.11.2.min.js"></script>
+        <script type="text/javascript" src="public/front/js/jquery.flexslider.min.js"></script>
         <script type="text/javascript">
             $(window).load(function() {
                 $('.flexslider').flexslider({
@@ -917,7 +916,7 @@
                     <div class="col-md-6 col-md-offset-3">
                         <div class="copyright text-center">
                             <p>
-                                &copy; Copyright, 2018 <a href="#">Your Website Link.</a> Theme by <a href="http://themewagon.com/"  target="_blank">ThemeWagon</a>
+                                &copy; Copyright, 2015 <a href="#">Your Website Link.</a> Theme by <a href="http://themewagon.com/"  target="_blank">ThemeWagon</a>
                             </p>
                         </div>
                     </div>
@@ -928,12 +927,12 @@
     
         <script src="public/front/js/bootstrap.min.js"></script>
         <script src="public/front/js/owl.carousel.min.js"></script>
-        <script src="public/front/js/jquery.mixitup.min.js" ></script>
+        <script type="text/javascript" src="public/front/js/jquery.mixitup.min.js" ></script>
         <script src="public/front/js/wow.min.js"></script>
         <script src="public/front/js/jquery.validate.js"></script>
-        <script src="public/front/js/jquery.hoverdir.js"></script>
-        <script src="public/front/js/jQuery.scrollSpeed.js"></script>
-        <script src="public/front/js/script.js"></script>
+        <script type="text/javascript" src="public/front/js/jquery.hoverdir.js"></script>
+        <script type="text/javascript" src="public/front/js/jQuery.scrollSpeed.js"></script>
+        <script src="public/front/js/scripts.js"></script>
         
 
     </body>
