Carosel Slider bug fixed

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="public/front/css/animate.css">
         <link rel="stylesheet" href="public/front/css/flexslider.css">
         <link rel="stylesheet" href="public/front/css/pricing.css">
-        <link rel="stylesheet" href="public/front/css/main.css">
+        <link rel="stylesheet" href="public/front/css/mains.css">
 
 
         <script src="public/front/js/jquery-1.11.2.min.js"></script>
