--- a/index.html
+++ b/index.html
@@ -918,7 +918,9 @@
                     <div class="col-md-6 col-md-offset-3">
                         <div class="copyright text-center">
                             <p>
-                                &copy; Copyright, 2015 <a href="#">Your Website Link.</a> Theme by <a href="http://themewagon.com/"  target="_blank">ThemeWagon</a>
+                                &copy; Copyright, <script>
+                                    document.write(new Date().getFullYear());
+                                </script>  <a href="#">Your Website Link.</a> Theme by <a href="http://themewagon.com/"  target="_blank">ThemeWagon</a>
                             </p>
                         </div>
                     </div>
