--- a/index.html
+++ b/index.html
@@ -920,7 +920,7 @@
                             <p>
                                 &copy; Copyright, <script>
                                     document.write(new Date().getFullYear());
-                                </script>  <a href="#">Your Website Link.</a> Theme by <a href="http://themewagon.com/"  target="_blank">ThemeWagon</a>
+                                </script>  <a href="https://ashrafshovo.github.io/mamaskitchen/">Your Website Link.</a> 
                             </p>
                         </div>
                     </div>
